added new content with episodes

--- a/tinydatacenter.com/index.html
+++ b/tinydatacenter.com/index.html
@@ -1,1 +1,45 @@
-hello :)
+<html>
+<head><title>tinydatacenter</title></head>
+<body>
+
+
+<h1>Tiny DC</h1>
+
+<p><strong>We use ARM processors and are unaffected by the Intel processor bugs :)</strong> -- please inquire about our longest ruler on Amazon special.</p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLD5lYPY-uZpoEVzJkgE2ejlSk9uG2TRlP" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+
+<h3>Episodes</h3>
+
+<ol>
+<li><a href="https://www.youtube.com/watch?v=RPyHFrn37Qc&list=PLD5lYPY-uZpoEVzJkgE2ejlSk9uG2TRlP&index=3">Setting up a new RasPi with a Hello World web site</a>
+<li><a href="https://www.youtube.com/watch?v=RPyHFrn37Qc&list=PLD5lYPY-uZpoEVzJkgE2ejlSk9uG2TRlP&index=3">Connecting to a netwwork and accessing the web site</a>
+<li><a href="https://www.youtube.com/watch?v=0S9rePglH2Y&list=PLD5lYPY-uZpoEVzJkgE2ejlSk9uG2TRlP&index=5">Using Docker to keep the site running between reboots</a>
+<li><a href="https://www.youtube.com/watch?v=crApIVQ5Wqk&list=PLD5lYPY-uZpoEVzJkgE2ejlSk9uG2TRlP&index=8">Adding a desktop environment<a/>
+<li>Creating a maintainable site
+<li>A fancy way to collect feedback - API and storage
+<li>Going live - configuring the home router
+<li>Let there be scale - adding a CDN, talking about factors
+<li>Show me, show me, show me how you do that trick
+<li>Talk nerdy to me
+</ol>
+
+<ul>
+<li><a href="https://www.youtube.com/watch?v=YtvJ4k8tEBY&list=PLD5lYPY-uZpoEVzJkgE2ejlSk9uG2TRlP&index=9">Branch Prediction and ARM</a>
+<li><a href="https://www.youtube.com/watch?v=4ef-aF5TCGs&list=PLD5lYPY-uZpoEVzJkgE2ejlSk9uG2TRlP&index=6">Economics of web hosting</a>
+<li><a href="https://www.youtube.com/watch?v=VHDdbuUF2lo&list=PLD5lYPY-uZpoEVzJkgE2ejlSk9uG2TRlP&index=7">Single Board Computer Spec Guide - Draft 1 (how to decide)</a>
+</ul>
+
+<h3>Maintenence</h3>
+
+<ul>
+<li><a href="">Upgrading from RasPi 1 to RasPi 3</a>
+</ul>
+ 
+
+<h3>Contact</h3>
+
+<p>social @t ispooge d0t com or (four one f1ve).93 seven.7four67</p>
+
+</html>
